# rspace

./: Cargo.toml  README.md
docker/: Dockerfile  Dockerfile.alpine  build.sh  run.sh
src/: factory.rs  game.rs  main.rs  maths.rs
src/components/: ai.rs  animation.rs  followme.rs  force.rs  health.rs  hitbox.rs  input.rs  lifetime.rs  mod.rs  shot.rs  spawner.rs  sprite.rs  transform.rs
src/core/: animation.rs  common.rs  ecs.rs  events.rs  meta.rs  mod.rs  renderers.rs  resources.rs  states.rs
src/levels/: level.rs  level1.rs  mod.rs  phase_basic_spawn.rs  phases.rs
src/states/: background.rs  gameover.rs  mod.rs  pause.rs  playing.rs  score.rs
src/systems/: ai.rs  animation.rs  followme.rs  graphics.rs  health.rs  input.rs  lifetime.rs  mod.rs  physics.rs  shot.rs  spawner.rs
